Fix ipad alignment

--- a/forum/static/css/index/nemo.css
+++ b/forum/static/css/index/nemo.css
@@ -1561,7 +1561,7 @@ button:focus {
           transform: rotate(0);
   top: 29px;
 }
-@media (min-width: 768px) {
+@media (min-width: 769px) {
   .navbar-transparent {
     background-color: transparent !important;
     border-color: rgba(255, 255, 255, 0.3);
@@ -1584,7 +1584,7 @@ button:focus {
     line-height: 30px;
   }
 }
-@media (min-width: 768px) and (max-width: 991px) {
+@media (min-width: 769px) and (max-width: 991px) {
   .navbar-nav > li > a {
     padding-left: 10px;
     padding-right: 10px;
